<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/error_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone">

    <ImageView
        android:id="@+id/error_image"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_200"
        android:layout_gravity="center"
        android:src="@drawable/generic_error" />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/error_dialog_title"
        android:textAppearance="@style/AppTheme.TitleText.Error" />

    <Button
        android:id="@+id/tryAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/try_again" />

</LinearLayout>
