<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_list_heroes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.br.myfavoritehero.features.listCharacter.ListHeroesFragment">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listHeroes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:layoutManager="GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/hero_item" />

    <include
        android:id="@+id/genericError"
        layout="@layout/generic_error_screen"/>

</androidx.constraintlayout.widget.ConstraintLayout>
